Fixed so that css for the search results on mobile version is not applied to loans overview table also.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -433,17 +433,17 @@ Media queries
     padding-bottom: 10px;
   }
 
-  .smsloangiver {
+  .smsloangiver_searchresult {
     padding-left: 30px;
     max-width: 90px;
   }
 
-  .sms_costnew{
+  .sms_costnew_searchresult{
     font-weight: bold;
     font-size: 20px;
   }
 
-  .sms_costold{
+  .sms_costold_searchresult{
     font-size: 13px;
     font-family: 'Open Sans', sans-serif;
     color: #7C8D87;
@@ -530,16 +530,16 @@ Media queries
     padding-bottom: 10px;
   }
 
-  .smsloangiver {
+  .smsloangiver_searchresult {
     padding-left: 30px;
     max-width: 90px;
   }
-  .sms_costnew{
+  .sms_costnew_searchresult{
     font-weight: bold;
     font-size: 20px;
   }
 
-  .sms_costold{
+  .sms_costold_searchresult{
     font-size: 13px;
     font-family: 'Open Sans', sans-serif;
     color: #7C8D87;
@@ -577,12 +577,12 @@ Media queries
     width: 115%;
   }
 
-  .sms_costnew{
+  .sms_costnew_searchresult{
     font-weight: bold;
     font-size: 20px;
   }
 
-  .sms_costold{
+  .sms_costold_searchresult{
     font-size: 13px;
     font-family: 'Open Sans', sans-serif;
     color: #7C8D87;
@@ -659,17 +659,17 @@ Media queries
     padding-bottom: 10px;
   }
 
-  .smsloangiver {
-    padding-left: 30px;
-    max-width: 90px;
+  .smsloangiver_searchresult {
+    padding-left: 10px;
+    max-width: 105px;
   }
 
-  .sms_costnew{
+  .sms_costnew_searchresult{
     font-weight: bold;
     font-size: 20px;
   }
 
-  .sms_costold{
+  .sms_costold_searchresult{
     font-size: 13px;
     font-family: 'Open Sans', sans-serif;
     color: #7C8D87;
@@ -766,17 +766,17 @@ Media queries
     padding-bottom: 10px;
   }
 
-  .smsloangiver {
-    padding-left: 30px;
-    max-width: 90px;
+  .smsloangiver_searchresult {
+    padding-left: 5px;
+    max-width: 130px;
   }
 
-  .sms_costnew{
+  .sms_costnew_searchresult{
     font-weight: bold;
     font-size: 20px;
   }
 
-  .sms_costold{
+  .sms_costold_searchresult{
     font-size: 13px;
     font-family: 'Open Sans', sans-serif;
     color: #7C8D87;
@@ -919,31 +919,37 @@ Media queries
   /* RESPONSIVE TABLE */
 /* https://css-tricks.com/responsive-data-tables */
   /* Force table to not be like tables anymore */
-  table, thead, tbody, th, td, tr { 
+  table.ex1, .ex1 thead, .ex1 tbody, .ex1 th, .ex1 tr { 
     display: block; 
   }
 
-  table tr { 
+  .td_fix_mobileformat {
+    /* Specialskapad för td */
+    display: block; 
+  }
+
+  table.ex1 tr { 
     height: 185px;
     margin-top: 10px;
   }
 
   /* Hide table headers (but not display: none;, for accessibility) */
-  thead tr { 
+  .ex1 thead tr { 
     position: absolute;
     top: -9999px;
     left: -9999px;
   }
   
-  td { 
+  .ex1 td { 
     /* Behave  like a "row" */
     border: none;
     border-bottom: 1px solid #eee; 
     position: relative;
-    padding-left: 50%; 
+
   }
-  
-  td:before { 
+
+
+  .ex1 td:before { 
     /* Now like a table header */
     position: absolute;
     /* Top/left values mimic padding */
@@ -975,20 +981,21 @@ Media queries
 
   }
 
-  .smsloangiver {
+  .smsloangiver_searchresult {
     padding-left: 15px;
     max-width: 220px;
     margin-bottom: 23px;
   }
 
-  .sms_costnew{
+  .sms_costnew_searchresult{
     font-weight: bold;
     font-size: 18px;
     margin-left: 15px;
-    color: #4C5954
+    color: #4C5954;
+    margin-left: -15px;
   }
 
-  .sms_costold{
+  .sms_costold_searchresult{
     font-size: 11px;
     font-family: 'Open Sans', sans-serif;
     color: #7C8D87;
